# squishy

./: .gitignore  Cargo.toml  tailwind.config.js
src/: main.rs
src/auth/: mod.rs
src/db/: fairing.rs  functions.rs  mod.rs  utils.rs
src/routes/: auth.rs  games.rs  index.rs  mod.rs  songs.rs  utils.rs
static/: songs.css  songs.js
templates/: base.html.tera  index.html.tera  login.html.tera  macros.html.tera  register.html.tera
templates/components/: nav.html.tera
templates/games/: admin.html.tera  edit.html.tera  list.html.tera  page.html.tera  status_opts.html.tera
templates/songs/: admin.html.tera  list.html.tera  page.html.tera
